feat!: Java 25 + native FFM TTY control, and drop java.desktop entirely (3.1.5-vis.39)
Four fork versions' worth of work, released as 3.1.5-vis.39:

- vis.36: TTYDeviceControl — drive the controlling terminal through the Java 22+
  FFM API (tcgetattr/tcsetattr, ioctl TIOCGWINSZ) instead of forking /bin/stty
  per attribute change and asking for the window size over ANSI. Every native
  call falls back to the legacy path.
- vis.37: the fork is Java 25 only. maven.compiler.release=25, the
  META-INF/versions/{9,22} multi-release layering is folded into src/main/java,
  and the "unsupported" TTYDeviceControl stub is gone.
- vis.38: the com.googlecode.lanterna.terminal.swing package (17 classes) and
  DefaultTerminalFactory's emulator/Swing/AWT surface are deleted. The consumer
  is a terminal application; it never opens a GUI window.
- vis.39: java.desktop is gone completely — TextColor.toColor() (already
  @Deprecated upstream for exactly this reason) and TerminalImage's
  ImageIO/BufferedImage/Graphics2D transcode path plus the java.awt.headless
  static initialiser are removed, so the jar links on a JDK image without
  java.desktop and inside a GraalVM native image. TerminalImage keeps the pure
  byte work (protocol detection, header-based dimension sniffing, cell-box
  sizing, Kitty/iTerm2 emission) and gains cellWidth()/cellHeight().
  module-info now exports com.googlecode.lanterna.terminal.image.

mvn -Djacoco.skip=true test on GraalVM CE 25.1.3: 165 tests, 0 failures.